[gd_scene load_steps=6 format=3 uid="uid://cpl46y25c2b2m"]

[ext_resource type="Script" path="res://Scripts/button.gd" id="1_kdplr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vke7e"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vu3ts"]

[sub_resource type="BoxMesh" id="BoxMesh_kv80n"]
material = SubResource("StandardMaterial3D_vu3ts")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_myplk"]
albedo_color = Color(0.890196, 0, 0, 1)

[node name="Lightswitch" type="StaticBody3D" groups=["lightswitches"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.47548, -0.129626, 1.27149)
script = ExtResource("1_kdplr")
metadata/_edit_group_ = true

[node name="ButtonCollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_vke7e")

[node name="ButtonMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_kv80n")
surface_material_override/0 = SubResource("StandardMaterial3D_myplk")

[node name="flickerTimer" type="Timer" parent="."]
autostart = true

[connection signal="press" from="." to="." method="_on_press"]
[connection signal="timeout" from="flickerTimer" to="." method="_on_flicker_timer_timeout"]
